--- a/src/sub.tex
+++ b/src/sub.tex
@@ -1,5 +1,8 @@
-\section{Sub section}
+\section[Sub section]{Sub section}
 
-\begin{frame}{Title}
-    sub
+\begin{frame}{Sub section}
+    aaaa
+    \begin{itemize}
+        \item aaaa
+    \end{itemize}
 \end{frame}
