--- a/setting.tex
+++ b/setting.tex
@@ -7,6 +7,7 @@
 \usepackage{tcolorbox}
 \usetikzlibrary{shapes}
 \usepackage{xcolor}
+\usepackage[absolute,overlay]{textpos}
 
 
 %%%%% Settings %%%%%
@@ -17,6 +18,7 @@
 %%%%% Original Command %%%%%
 \newcommand{\hlcap}[3][yellow]{\tikz[baseline=(x.base)]{\node[rectangle,rounded corners,fill=#1!10](x){$#2$} node[below of=x, color=#1]{#3};}}
 \newcommand{\subt}[1]{\vspace{-2mm}{\fontsize{10pt}{0cm}\selectfont \textcolor{lightgray}{#1}}\vspace{-1mm}}
+\newcommand{\slide}[2]{\begin{frame}{#1}\begin{textblock*}{0.1\linewidth}(0pt, 230pt)\includegraphics[scale=0.5]{C:/Users/atsushi/Documents/workspace/env/Beamer/beamer/beamer/master_figure/Emb_logo.pdf}\end{textblock*} #2 \end{frame}}
 
 \tcbset{
     framebox/.style={
