chore: add finish page

--- a/template.tex
+++ b/template.tex
@@ -19,7 +19,8 @@
 
 % \input{src/sub.tex}
 
-\frame{\centering \Large Thank you for your attention !!}
+\begin{frame}[standout]
+\end{frame}
 
 
 \end{document}
