--- a/setting.tex
+++ b/setting.tex
@@ -14,11 +14,18 @@
 \usetheme{metropolis}
 \metroset{sectionpage=progressbar}
 \metroset{block=fill}
+\setbeamerfont{frametitle}{size=\normalsize}
+\definecolor{coolblack}{rgb}{0.0, 0.18, 0.39}
+\setbeamercolor{frametitle}{bg=coolblack,fg=white}
+\definecolor{lightgray}{rgb}{0.83, 0.83, 0.83}
+\setbeamercolor{progress bar}{bg=lightgray, fg=coolblack}
+\makeatletter
+\setlength{\metropolis@frametitle@padding}{1.4ex}% <- default 2.2 ex
+
 
 %%%%% Original Command %%%%%
-\newcommand{\hlcap}[3][yellow]{\tikz[baseline=(x.base)]{\node[rectangle,rounded corners,fill=#1!10](x){$#2$} node[below of=x, color=#1]{#3};}}
 \newcommand{\subt}[1]{\vspace{-2mm}{\fontsize{10pt}{0cm}\selectfont \textcolor{lightgray}{#1}}\vspace{-1mm}}
-\newcommand{\slide}[2]{\begin{frame}{#1}\begin{textblock*}{0.1\linewidth}(-3pt, 236pt)\includegraphics[scale=0.5]{C:/Users/atsushi/Documents/workspace/env/Beamer/beamer/beamer/master_figure/Emb_logo.pdf}\end{textblock*}#2\end{frame}}
+\newcommand{\lastpage}[0]{\begin{frame}\begin{textblock*}{1.0\linewidth}(0pt, 50pt)\includegraphics[scale=0.512]{\beamerDir/master_figure/last.pdf}\end{textblock*}\end{frame}}
 
 \tcbset{
     framebox/.style={
