--- a/template.tex
+++ b/template.tex
@@ -1,4 +1,10 @@
-\input{C:/Users/atsushi/Documents/workspace/env/Beamer/beamer/beamer/setting.tex}
+%%%%% Please set the path to 'beamer' directory in your environment %%%%%
+\newcommand{\beamerDir}[0]{C:/Users/atsushi/Documents/workspace/env/Beamer/beamer/beamer/}
+
+
+%%%%% Load setting %%%%%
+\input{\beamerDir/setting.tex}
+
 
 %%%%% Front Cover %%%%%
 \title{Sample}
@@ -6,6 +12,7 @@
 \author{矢野 篤志}
 \date{\today}
 \institute[EMBIV]{EMBIV}
+\logo{\begin{textblock*}{0.1\linewidth}(-3pt, 236pt)\includegraphics[scale=0.5]{\beamerDir/master_figure/Emb_logo.pdf}\end{textblock*}}
 
 
 %%%%% Document Start %%%%%
@@ -17,10 +24,8 @@
     \tableofcontents
 \end{frame}
 
-% \input{src/sub.tex}
+% \input{XXX.tex}
 
-\begin{frame}[standout]
-\end{frame}
-
+\lastpage
 
 \end{document}
