--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/background.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/background.tex
@@ -47,7 +47,7 @@
     \end{block}
 \end{frame}
 
-\begin{frame}{Multi-threaded executor}
+\begin{frame}{処理チェーン}
     \begin{itemize}
         \item チェーンの各頂点は, コールバックを表す
         \item 処理チェーンは, 特定のイベント (通常は, システム タイマーによってアクティベーションされる時間イベント) によってトリガされ, 複数のエグゼキューターにまたがる
