--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
@@ -12,7 +12,7 @@
 \author{矢野 篤志}
 \date{\today}
 \institute[EMBIV]{EMBIV}
-\logo{\begin{textblock*}{0.1\linewidth}(-3pt, 2.36pt)\includegraphics[scale=0.5]{\beamerDir/master_figure/Emb_logo.pdf}\end{textblock*}}
+\logo{\begin{textblock*}{0.1\linewidth}(-3pt, 236pt)\includegraphics[scale=0.5]{\beamerDir/master_figure/Emb_logo.pdf}\end{textblock*}}
 
 
 %%%%% Document Start %%%%%
@@ -26,6 +26,7 @@
 
 \input{background.tex}
 \input{system_model.tex}
+\input{responce_time_analysys.tex}
 
 \lastpage
 
