--- a/setting.tex
+++ b/setting.tex
@@ -51,7 +51,7 @@
 % Itemize color
 \setbeamertemplate{itemize item}{\color{black}\scriptsize$\blacksquare$}
 \setbeamertemplate{itemize subitem}{\color{black}\scriptsize$-$}
-% Assumption color
+% Simplification  color
 \setbeamercolor{block title example}{fg=black!80,bg=cobalt!35}
 \setbeamercolor{block body example}{fg=black,bg=cobalt!15}
 % Definition
@@ -94,7 +94,7 @@
 \newcommand{\headerheight}[0]{8mm}
 \newcommand{\tabml}[1]{\hspace{-2.1mm}\begin{tabular}{l} #1 \end{tabular}}
 \newcommand{\al}[1]{\alert{#1}}
-\newcommand{\assume}[1]{\begin{exampleblock}{Assumption}#1\end{exampleblock}}% Assumption
+\newcommand{\assume}[1]{\begin{exampleblock}{Simplification }#1\end{exampleblock}}% Assumption
 
 \tcbset{
     framebox/.style={
